--- a/web/frontend/_posts/2018-05-06-challenge-6.markdown
+++ b/web/frontend/_posts/2018-05-06-challenge-6.markdown
@@ -4,3 +4,17 @@ title:  "Challenge 6"
 date:   2018-05-06 05:06:11 +0000
 categories: challenges
 ---
+
+### yasha says
+
+Impressive...at challenge 6 already...
+
+### Challenge 6
+
+Time to try your hand at creating a directory. Make a directory called yashaInfinity
+
+## Hints
+Try saying make directory fast; sounds a lot like `mkdir`, huh ...
+
+
+#### [Next Challenge](/challenges/challenges/2018/05/06/challenge-7.html)
